modules/gdscript/tests/scripts/analyzer/errors/for_loop_wrong_specified_type.gd
func test():
	var a: Array[Resource] = []
	for node: Node in a:
		print(node)
